# agentkit-model_card.md

./: CONTRIBUTING-PYTHON.md  CONTRIBUTING-TYPESCRIPT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: labeler.yml
.github/workflows/: changelog.yml  lint.yml  publish_docs.yml  publish_nightly.yml  publish_npm_agentkit.yml  publish_npm_agentkit_langchain.yml  publish_npm_agentkit_model_context_protocol.yml  publish_npm_agentkit_vercel_ai_sdk.yml  publish_npm_create_onchain_agent.yml  publish_pypi_create_onchain_agent.yml
python/: README.md
python/coinbase-agentkit/: CHANGELOG.md  Makefile  README.md  pyproject.toml
python/coinbase-agentkit/changelog.d/: +24d3eed5.bugfix.md  +25ed7274.feature.md  +9b80489d.feature.md  477.feature.md  488.bugfix.md  496.bugfix.md
python/coinbase-agentkit/coinbase_agentkit/: __init__.py
python/coinbase-agentkit/docs/: conf.py
python/create-onchain-agent/: CHANGELOG.md  README.md  pyproject.toml
python/create-onchain-agent/changelog.d/: +0fcb14d9.bugfix.md  +cdfc1615.feature.md  +fff2088a.bugfix.md  498.feature.md  503.feature.md
python/create-onchain-agent/create_onchain_agent/: cli.py
python/create-onchain-agent/templates/chatbot/: .env.local.jinja  chatbot.py.jinja  pyproject.toml.jinja
python/examples/langchain-cdp-chatbot/: chatbot.py  pyproject.toml
python/examples/langchain-eth-account-chatbot/: chatbot.py
typescript/: README.md  package-lock.json  package.json
typescript/.changeset/: all-nails-cry.md  breezy-parks-buy.md  chubby-hornets-end.md  config.json  cyan-cooks-smile.md  dry-doors-rest.md  lovely-vans-knock.md  plenty-cars-arrive.md  proud-baths-judge.md  ripe-buttons-dress.md  short-candies-carry.md  slimy-pianos-hear.md  small-cloths-swim.md  smart-ideas-juggle.md
typescript/agentkit/: CHANGELOG.md  README.md  package.json
typescript/create-onchain-agent/: CHANGELOG.md  README.md  package-lock.json  package.json
(+75 files in other folders)
