[project]
name = "create-onchain-agent"
version = "0.1.3"
description = "CLI to create an onchain agent project"
authors = [
    {name = "Carson Roscoe",email = "carsonroscoe7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{ include = "create_onchain_agent" }]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
copier = "^9.1.0"
rich = "^13.3.2"
questionary = "^2.1.0"
requests = "^2.32.3"
platformdirs = "^4.3.6"
prompt-toolkit = "^3.0.50"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-onchain-agent = "create_onchain_agent.cli:create_project"
