[tool.poetry]
name = "create-onchain-agent"
version = "0.1.3"
description = "CLI to create an onchain agent project"
authors = ["Carson Roscoe <carsonroscoe7@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["coinbase", "sdk", "crypto", "cdp", "agentkit", "ai", "agent"]
packages = [{ include = "create_onchain_agent" }]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
copier = "^9.1.0"
rich = "^13.3.2"
questionary = "^2.1.0"
requests = "^2.32.3"
platformdirs = "^4.3.6"
prompt-toolkit = "^3.0.50"

[tool.poetry.group.dev.dependencies]
towncrier = "^24.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-onchain-agent = "create_onchain_agent.cli:create_project"

[tool.towncrier]
package = "create_onchain_agent"
package_dir = "create_onchain_agent"
filename = "CHANGELOG.md"
directory = "changelog.d/"
start_string = "# Coinbase Create Onchain Agent Changelog"

[tool.towncrier.fragment.feature]
name = "Added"

[tool.towncrier.fragment.bugfix]
name = "Fixed"